# HKA-SAT-exercises

./: .gitignore  blatt1-lösungen.md
blatt1/: aufgabe3.md  aufgabe4.md  not_aufgabe4.md
blatt1/aufgabe1/graph-coloring/: CMakeLists.txt  README.md  main.cpp
blatt1/aufgabe1/graph-coloring/src/: dimacs_graph_parser.h  main.cpp
blatt1/aufgabe2/: .gitignore  CMakeLists.txt  ReadMe.md  RunSat.sh  createDimacs.c  main.c  readSolution.c  runSpeedSat.sh  speed.h
blatt1/aufgabe4/: README.MD
blatt1/aufgabe4/pytagorean-triplets/: CMakeLists.txt
blatt1/aufgabe4/pytagorean-triplets/src/: main.cpp
blatt2/: aufgabe1.md  aufgabe2.md
blatt3/: Aufgabe2.md  aufgabe1.md  aufgabe3.md
